commented out some endpoints in products  as they are not currently necessary for the app, they also need more security measures
