# openapi.yaml
@@ -24,22 +24,22 @@ paths:
                   $ref: "#/components/schemas/Product"
         "500":
           description: server error
-    post:
-      summary: Create a new product
-      operationId: createProduct
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/ProductInput"
-      responses:
-        "201":
-          description: the created product
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Product"
+    # post:
+    #   summary: Create a new product
+    #   operationId: createProduct
+    #   requestBody:
+    #     required: true
+    #     content:
+    #       application/json:
+    #         schema:
+    #           $ref: "#/components/schemas/ProductInput"
+    #   responses:
+    #     "201":
+    #       description: the created product
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/Product"
   /products/{id}:
     get:
       summary: get a single shop product by providing an id
@@ -59,44 +59,44 @@ paths:
             $ref: "#/components/schemas/Product"
         "404":
           description: product not found
-    put:
-      summary: updates a product
-      operationId: updateProduct
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-      requestBody:
-        required: true
-        content:
-          application/json:
-          schema:
-            $ref: "#/components/schemas/ProductInput"
-      responses:
-        "200":
-          description: the updated product
-          content:
-            application/json:
-            schema:
-            $ref: "#/components/schemas/Product"
-        "404":
-          description: product not found
-  delete:
-    summary: deletes the product with the provided ID
-    operationId: deleteProduct
-    parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-    responses:
-      "204":
-        description: product deleted successfully
-      "404":
-        description: product not found
+  #   put:
+  #     summary: updates a product
+  #     operationId: updateProduct
+  #     parameters:
+  #       - name: id
+  #         in: path
+  #         required: true
+  #         schema:
+  #           type: integer
+  #     requestBody:
+  #       required: true
+  #       content:
+  #         application/json:
+  #         schema:
+  #           $ref: "#/components/schemas/ProductInput"
+  #     responses:
+  #       "200":
+  #         description: the updated product
+  #         content:
+  #           application/json:
+  #           schema:
+  #           $ref: "#/components/schemas/Product"
+  #       "404":
+  #         description: product not found
+  # delete:
+  #   summary: deletes the product with the provided ID
+  #   operationId: deleteProduct
+  #   parameters:
+  #     - name: id
+  #       in: path
+  #       required: true
+  #       schema:
+  #         type: integer
+  #   responses:
+  #     "204":
+  #       description: product deleted successfully
+  #     "404":
+  #       description: product not found
 components:
   schemas:
     Product:
